# lab-08-grpc-client

./: .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake
sources/: main.cpp
